--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -73,6 +73,7 @@
         border-radius: 5px;
         text-align: center;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: rgb(220, 220, 220);
         flex-wrap: nowrap;
     }
 
